k8s-manifests/plausible-events-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plausible-events-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plausible-events-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plausible-events-db
    spec:
      containers:
      - image: yandex/clickhouse-server:latest
        imagePullPolicy: IfNotPresent
        name: plausible-events-db
        ports:
        - containerPort: 8123
        resources: {}
      restartPolicy: Always
